# CryptoScraper

./: .gitignore  CMakeLists.txt  Makefile  README.md  scraper  scraper.c  scraper.h
include/: botCreator.h  getUrlData.h
src/: botCreator.c  getUrlData.c  main.c  scraper.c
src/utils/: getUrlData.c
test/: botCreator.test.c  getUrlData.test.c
tests/: botCreator.test.c  getUrlData.test.c
